# UI-COMP2811

./: .gitignore  README.md
Design Documents/: Preliminary Design Document.md  Project Overview.docx  Project Overview.md
Our Groups Work/Dashboard/: CMakeLists.txt  DatasetInterface.h  csv.hpp  fluorinatedpage.cpp  fluorinatedpage.h  main.cpp
Our Groups Work/Iteration1/: CMakeLists.txt  DatasetInterface.h  Makefile  Utils.cpp  datavisualizationpage.cpp  fluorinatedpage.cpp  fluorinatedpage.h  mainwindow.cpp  mainwindow.h  pollutantoverview.cpp  pollutantoverview.h  popspage.cpp  popspage.h
Our Groups Work/QTapp/: CMakeLists.txt  Utils.h  compliancedashboard.cpp  datavisualizationpage.h  main.cpp  pollutantoverview.cpp  pollutantoverview.h
Our Groups Work/Qt/: CMakeLists.txt  DatasetInterface.cpp  DatasetInterface.h  Utils.cpp  compliancedashboard.cpp  compliancedashboard.h  constants.cpp  constants.h  datavisualizationpage.cpp  fluorinatedpage.cpp  fluorinatedpage.h  main.cpp  mainwindow.cpp  mainwindow.h  pollutantoverview.cpp  pollutantoverview.h  popspage.cpp  popspage.h  sqlite3.h  translation_manager.cpp  translation_manager.h  translations.txt
Our Groups Work/Week 0/: Preliminary Design Document.md  Requirements Document.docx
